// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CloseEmulator should render correctly 1`] = `
<button
  class="md-btn md-btn--icon md-pointer--hover md-inline-block"
  type="button"
>
  <div
    class="md-ink-container"
  >
    <span
      aria-hidden="true"
    />
  </div>
  <i
    class="md-icon material-icons md-text--inherit"
  >
    close
  </i>
</button>
`;

exports[`CloseEmulator should render correctly 2`] = `
<button
  class="md-btn md-btn--raised md-btn--text md-pointer--hover md-background--primary md-background--primary-hover md-inline-block"
  type="button"
>
  <div
    class="md-ink-container"
  >
    <span
      aria-hidden="true"
    />
  </div>
  Hello, World!
</button>
`;
